install plot packages + updated min_max function

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "concurrently": "^8.2.2"
+    "chart.js": "^4.4.1",
+    "concurrently": "^8.2.2",
+    "react-chartjs-2": "^5.2.0"
   },
   "scripts": {
     "start": "concurrently \"cd home-app-frontend && npm run dev\" \"cd backend && python app.py\""
